--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ variables:
   DOCKER_REGISTRY: 302990163096.dkr.ecr.eu-west-1.amazonaws.com
   AWS_DEFAULT_REGION: eu-west-1
   APP_NAME: emailservice
+  AWS_ACCESS_KEY_ID: AKIAUNC467SMNVURGBVP
+  AWS_SECRET_ACCESS_KEY: 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
 
 build:
   stage: build
