--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,10 @@ stages:
   - build
 
 variables:
-  DOCKER_REGISTRY: 302990163096.dkr.ecr.eu-west-1.amazonaws.com
+  CI_GROUP_NAME: telecomproject
   AWS_DEFAULT_REGION: eu-west-1
-  APP_NAME: emailservice
-  #### This is wrong: No need to write here in the future aws_acces_key_id and aws_secret_acess_key
-  AWS_ACCESS_KEY_ID: AKIAUNC467SMNVURGBVP
-  AWS_SECRET_ACCESS_KEY: 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
+  AWS_ACCESS_KEY_ID: AKIAUNC467SMOH2XM5NF
+  AWS_SECRET_ACCESS_KEY: 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
 
 build:
   stage: build
@@ -18,6 +16,10 @@ build:
   before_script:
     - apk add --no-cache curl jq python3 py3-pip
     - pip install awscli
+    - aws ecr describe-repositories --repository-names $CI_GROUP_NAME >> /dev/null || aws ecr create-repository --repository-name $CI_GROUP_NAME --region $AWS_DEFAULT_REGION
+  #  - export DOCKER_REGISTRY=`aws ecr describe-repositories --repository-names $CI_GROUP_NAME | grep "repositoryUri" | awk -F ":\ " '{print $2}' | awk '{ print substr( $0, 1, length($0) -1 ) }' | awk '{print substr($0, 2, length($0) - 2)}'` 
+    - export DOCKER_REGISTRY=`aws ecr describe-repositories --repository-names telecomproject | jq -r .repositories[].repositoryUri`
+    - echo $DOCKER_REGISTRY
     - aws ecr get-login-password | docker login --username AWS --password-stdin $DOCKER_REGISTRY
   script:
     - docker build -t $DOCKER_REGISTRY:$CI_PROJECT_NAME .
